ANTLR/DSL_grammarParser.py
# Generated from DSL_grammar.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO

from DSL_grammarLexer import DSL_grammarLexer




class DSL_grammarParser ( Parser ):

    grammarFileName = "DSL_grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#'", "'_'", "'if'", "':'", "'else'", 
                     "'while'", "'for'", "'='", "'STORY'", "'STAGE'", "'SECTION'", 
                     "'FROM'", "'.'", "'TO'", "'ACTION'", "'&&'", "'||'", 
                     "'+'", "'-'", "'*'", "'**'", "'/'", "'//'", "'%'", 
                     "'nr_nodes'", "'('", "')'", "'nr_sections'", "'nr_stages'", 
                     "'nr_of_interactions'", "'color'", "'width'", "'style'", 
                     "'\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "TYPE", "LETTERS", 
                      "DIGITS", "NENULE_DIGITS", "SIGNS", "NEWLINE", "WHITESPACE" ]

    RULE_source_code = 0
    RULE_variables_declaration = 1
    RULE_variable_declaration = 2
    RULE_variable = 3
    RULE_identifier = 4
    RULE_letter = 5
    RULE_digit = 6
    RULE_nenule_digit = 7
    RULE_set_of_affirmations = 8
    RULE_set_of_affirmation = 9
    RULE_variable_attribution = 10
    RULE_act_description = 11
    RULE_story = 12
    RULE_stage = 13
    RULE_section = 14
    RULE_flow_description = 15
    RULE_node = 16
    RULE_conditions = 17
    RULE_operand = 18
    RULE_composed_operand = 19
    RULE_operation = 20
    RULE_function = 21
    RULE_condition = 22
    RULE_string = 23
    RULE_characters = 24
    RULE_comments = 25

    ruleNames =  [ "source_code", "variables_declaration", "variable_declaration", 
                   "variable", "identifier", "letter", "digit", "nenule_digit", 
                   "set_of_affirmations", "set_of_affirmation", "variable_attribution", 
                   "act_description", "story", "stage", "section", "flow_description", 
                   "node", "conditions", "operand", "composed_operand", 
                   "operation", "function", "condition", "string", "characters", 
                   "comments" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    TYPE=35
    LETTERS=36
    DIGITS=37
    NENULE_DIGITS=38
    SIGNS=39
    NEWLINE=40
    WHITESPACE=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    def parse(argv):
        from DSL_grammarListener import DSL_grammarListener
        if len(sys.argv) > 1:
            input = FileStream(argv[1])
            lexer = DSL_grammarLexer(input)
            stream = CommonTokenStream(lexer)
            parser = DSL_grammarParser(stream)
            tree = parser.source_code()
            printer = DSL_grammarListener()
            walker = ParseTreeWalker()
            walker.walk(printer, tree)
        else:
            print('Error : Expected a valid file')


    class Source_codeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variables_declaration(self):
            return self.getTypedRuleContext(DSL_grammarParser.Variables_declarationContext,0)


        def set_of_affirmations(self):
            return self.getTypedRuleContext(DSL_grammarParser.Set_of_affirmationsContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(DSL_grammarParser.WHITESPACE)
            else:
                return self.getToken(DSL_grammarParser.WHITESPACE, i)

        def comments(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSL_grammarParser.CommentsContext)
            else:
                return self.getTypedRuleContext(DSL_grammarParser.CommentsContext,i)


        def getRuleIndex(self):
            return DSL_grammarParser.RULE_source_code

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSource_code" ):
                listener.enterSource_code(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSource_code" ):
                listener.exitSource_code(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSource_code" ):
                return visitor.visitSource_code(self)
            else:
                return visitor.visitChildren(self)




    def source_code(self):

        localctx = DSL_grammarParser.Source_codeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_source_code)
        self._la = 0 # Token type
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DSL_grammarParser.TYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.variables_declaration()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DSL_grammarParser.WHITESPACE:
                    self.state = 53
                    self.match(DSL_grammarParser.WHITESPACE)
                    self.state = 58
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 59
                self.set_of_affirmations()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DSL_grammarParser.WHITESPACE:
                    self.state = 60
                    self.match(DSL_grammarParser.WHITESPACE)
                    self.state = 65
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DSL_grammarParser.T__0:
                    self.state = 66
                    self.match(DSL_grammarParser.T__0)
                    self.state = 67
                    self.comments()
                    self.state = 72
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [DSL_grammarParser.T__1, DSL_grammarParser.T__2, DSL_grammarParser.T__5, DSL_grammarParser.T__6, DSL_grammarParser.T__8, DSL_grammarParser.T__9, DSL_grammarParser.T__10, DSL_grammarParser.T__24, DSL_grammarParser.T__27, DSL_grammarParser.T__28, DSL_grammarParser.T__29, DSL_grammarParser.T__30, DSL_grammarParser.T__31, DSL_grammarParser.T__32, DSL_grammarParser.LETTERS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.set_of_affirmations()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variables_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_declaration(self):
            return self.getTypedRuleContext(DSL_grammarParser.Variable_declarationContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(DSL_grammarParser.WHITESPACE)
            else:
                return self.getToken(DSL_grammarParser.WHITESPACE, i)

        def variables_declaration(self):
            return self.getTypedRuleContext(DSL_grammarParser.Variables_declarationContext,0)


        def getRuleIndex(self):
            return DSL_grammarParser.RULE_variables_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariables_declaration" ):
                listener.enterVariables_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariables_declaration" ):
                listener.exitVariables_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariables_declaration" ):
                return visitor.visitVariables_declaration(self)
            else:
                return visitor.visitChildren(self)




    def variables_declaration(self):

        localctx = DSL_grammarParser.Variables_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variables_declaration)
        self._la = 0 # Token type
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.variable_declaration()
                self.state = 80
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 77
                        self.match(DSL_grammarParser.WHITESPACE) 
                    self.state = 82
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.variable_declaration()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DSL_grammarParser.WHITESPACE:
                    self.state = 84
                    self.match(DSL_grammarParser.WHITESPACE)
                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 90
                self.variables_declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(DSL_grammarParser.TYPE, 0)

        def variable(self):
            return self.getTypedRuleContext(DSL_grammarParser.VariableContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(DSL_grammarParser.WHITESPACE)
            else:
                return self.getToken(DSL_grammarParser.WHITESPACE, i)

        def getRuleIndex(self):
            return DSL_grammarParser.RULE_variable_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_declaration" ):
                listener.enterVariable_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_declaration" ):
                listener.exitVariable_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_declaration" ):
                return visitor.visitVariable_declaration(self)
            else:
                return visitor.visitChildren(self)




    def variable_declaration(self):

        localctx = DSL_grammarParser.Variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variable_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(DSL_grammarParser.TYPE)
            self.state = 96 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 95
                self.match(DSL_grammarParser.WHITESPACE)
                self.state = 98 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==DSL_grammarParser.WHITESPACE):
                    break

            self.state = 100
            self.variable()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(DSL_grammarParser.IdentifierContext,0)


        def getRuleIndex(self):
            return DSL_grammarParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = DSL_grammarParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def letter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSL_grammarParser.LetterContext)
            else:
                return self.getTypedRuleContext(DSL_grammarParser.LetterContext,i)


        def digit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSL_grammarParser.DigitContext)
            else:
                return self.getTypedRuleContext(DSL_grammarParser.DigitContext,i)


        def getRuleIndex(self):
            return DSL_grammarParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = DSL_grammarParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_identifier)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DSL_grammarParser.LETTERS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.letter()
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 108
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [DSL_grammarParser.LETTERS]:
                            self.state = 105
                            self.letter()
                            pass
                        elif token in [DSL_grammarParser.DIGITS]:
                            self.state = 106
                            self.digit()
                            pass
                        elif token in [DSL_grammarParser.T__1]:
                            self.state = 107
                            self.match(DSL_grammarParser.T__1)
                            pass
                        else:
                            raise NoViableAltException(self)
                 
                    self.state = 112
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                pass
            elif token in [DSL_grammarParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(DSL_grammarParser.T__1)
                self.state = 119
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 117
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [DSL_grammarParser.LETTERS]:
                            self.state = 114
                            self.letter()
                            pass
                        elif token in [DSL_grammarParser.DIGITS]:
                            self.state = 115
                            self.digit()
                            pass
                        elif token in [DSL_grammarParser.T__1]:
                            self.state = 116
                            self.match(DSL_grammarParser.T__1)
                            pass
                        else:
                            raise NoViableAltException(self)
                 
                    self.state = 121
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LETTERS(self):
            return self.getToken(DSL_grammarParser.LETTERS, 0)

        def getRuleIndex(self):
            return DSL_grammarParser.RULE_letter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetter" ):
                listener.enterLetter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetter" ):
                listener.exitLetter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetter" ):
                return visitor.visitLetter(self)
            else:
                return visitor.visitChildren(self)




    def letter(self):

        localctx = DSL_grammarParser.LetterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_letter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(DSL_grammarParser.LETTERS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DigitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGITS(self):
            return self.getToken(DSL_grammarParser.DIGITS, 0)

        def getRuleIndex(self):
            return DSL_grammarParser.RULE_digit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDigit" ):
                listener.enterDigit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDigit" ):
                listener.exitDigit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDigit" ):
                return visitor.visitDigit(self)
            else:
                return visitor.visitChildren(self)




    def digit(self):

        localctx = DSL_grammarParser.DigitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_digit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(DSL_grammarParser.DIGITS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Nenule_digitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NENULE_DIGITS(self):
            return self.getToken(DSL_grammarParser.NENULE_DIGITS, 0)

        def getRuleIndex(self):
            return DSL_grammarParser.RULE_nenule_digit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNenule_digit" ):
                listener.enterNenule_digit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNenule_digit" ):
                listener.exitNenule_digit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNenule_digit" ):
                return visitor.visitNenule_digit(self)
            else:
                return visitor.visitChildren(self)




    def nenule_digit(self):

        localctx = DSL_grammarParser.Nenule_digitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_nenule_digit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(DSL_grammarParser.NENULE_DIGITS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Set_of_affirmationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def set_of_affirmation(self):
            return self.getTypedRuleContext(DSL_grammarParser.Set_of_affirmationContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(DSL_grammarParser.WHITESPACE)
            else:
                return self.getToken(DSL_grammarParser.WHITESPACE, i)

        def set_of_affirmations(self):
            return self.getTypedRuleContext(DSL_grammarParser.Set_of_affirmationsContext,0)


        def getRuleIndex(self):
            return DSL_grammarParser.RULE_set_of_affirmations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSet_of_affirmations" ):
                listener.enterSet_of_affirmations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSet_of_affirmations" ):
                listener.exitSet_of_affirmations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSet_of_affirmations" ):
                return visitor.visitSet_of_affirmations(self)
            else:
                return visitor.visitChildren(self)




    def set_of_affirmations(self):

        localctx = DSL_grammarParser.Set_of_affirmationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_set_of_affirmations)
        self._la = 0 # Token type
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.set_of_affirmation()
                self.state = 134
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 131
                        self.match(DSL_grammarParser.WHITESPACE) 
                    self.state = 136
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.set_of_affirmation()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DSL_grammarParser.WHITESPACE:
                    self.state = 138
                    self.match(DSL_grammarParser.WHITESPACE)
                    self.state = 143
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 144
                self.set_of_affirmations()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Set_of_affirmationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def flow_description(self):
            return self.getTypedRuleContext(DSL_grammarParser.Flow_descriptionContext,0)


        def act_description(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSL_grammarParser.Act_descriptionContext)
            else:
                return self.getTypedRuleContext(DSL_grammarParser.Act_descriptionContext,i)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(DSL_grammarParser.WHITESPACE)
            else:
                return self.getToken(DSL_grammarParser.WHITESPACE, i)

        def variable_attribution(self):
            return self.getTypedRuleContext(DSL_grammarParser.Variable_attributionContext,0)


        def set_of_affirmations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSL_grammarParser.Set_of_affirmationsContext)
            else:
                return self.getTypedRuleContext(DSL_grammarParser.Set_of_affirmationsContext,i)


        def conditions(self):
            return self.getTypedRuleContext(DSL_grammarParser.ConditionsContext,0)


        def function(self):
            return self.getTypedRuleContext(DSL_grammarParser.FunctionContext,0)


        def getRuleIndex(self):
            return DSL_grammarParser.RULE_set_of_affirmation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSet_of_affirmation" ):
                listener.enterSet_of_affirmation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSet_of_affirmation" ):
                listener.exitSet_of_affirmation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSet_of_affirmation" ):
                return visitor.visitSet_of_affirmation(self)
            else:
                return visitor.visitChildren(self)




    def set_of_affirmation(self):

        localctx = DSL_grammarParser.Set_of_affirmationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_set_of_affirmation)
        self._la = 0 # Token type
        try:
            self.state = 255
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,32,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 148
                    self.act_description()
                    self.state = 152
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==DSL_grammarParser.WHITESPACE:
                        self.state = 149
                        self.match(DSL_grammarParser.WHITESPACE)
                        self.state = 154
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 157 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DSL_grammarParser.T__8) | (1 << DSL_grammarParser.T__9) | (1 << DSL_grammarParser.T__10))) != 0)):
                        break

                self.state = 159
                self.flow_description()
                self.state = 163
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 160
                        self.match(DSL_grammarParser.WHITESPACE) 
                    self.state = 165
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.variable_attribution()
                self.state = 171
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,20,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 169
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [DSL_grammarParser.WHITESPACE]:
                            self.state = 167
                            self.match(DSL_grammarParser.WHITESPACE)
                            pass
                        elif token in [DSL_grammarParser.T__1, DSL_grammarParser.T__2, DSL_grammarParser.T__5, DSL_grammarParser.T__6, DSL_grammarParser.T__8, DSL_grammarParser.T__9, DSL_grammarParser.T__10, DSL_grammarParser.T__24, DSL_grammarParser.T__27, DSL_grammarParser.T__28, DSL_grammarParser.T__29, DSL_grammarParser.T__30, DSL_grammarParser.T__31, DSL_grammarParser.T__32, DSL_grammarParser.LETTERS]:
                            self.state = 168
                            self.set_of_affirmations()
                            pass
                        else:
                            raise NoViableAltException(self)
                 
                    self.state = 173
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,20,self._ctx)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 174
                self.match(DSL_grammarParser.T__2)
                self.state = 176 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 175
                    self.match(DSL_grammarParser.WHITESPACE)
                    self.state = 178 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==DSL_grammarParser.WHITESPACE):
                        break
